--- a/.github/workflows/daily_papers.yml
+++ b/.github/workflows/daily_papers.yml
@@ -28,4 +28,4 @@ jobs:
         env:
           DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }} # 从 Secrets 注入 API Key
         run: |
-          python scripts/fetch_summarize_papers.py
+          python fetch_summarize_papers.py # Corrected path
