--- a/.github/workflows/daily_papers.yml
+++ b/.github/workflows/daily_papers.yml
@@ -10,6 +10,8 @@ on:
 jobs:
   fetch_and_summarize:
     runs-on: ubuntu-latest
+    permissions: # Add this block
+      contents: write # Grant write permission to repository contents
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
